--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 	width: 1200px;
 	height: 500px;
 	background-color: blue;
-	border-left: 5px solid black;
-	border-right: 5px solid black;
-	border-bottom: 5px solid black;
+	border-left: 5px solid grey;
+	border-right: 5px solid grey;
+	border-bottom: 5px solid grey;
 	margin-top: 50px;
 	margin-left: 100px;
 	position: absolute;
@@ -15,24 +15,60 @@
 img{
 	width: 250px;
 	position: absolute;
-	transition: all 0.3s ease 0.3s;
+	transition: all 0.3s linear 0.9s;
 	animation-name: fish;
-	animation-duration: 5s;
+	animation-duration: 9s;
 	animation-delay: 2s;
 	animation-iteration-count: infinite;
 	animation-fill-mode: backwards;
-	animation-direction: alternate;
+	animation-direction: alternate-reverse;
+	animation-timing-function: linear;
 }
 
 @keyframes fish {
-	from{
-		background-color: pink;
+	0%{
 		top: 50px;
 		left: 50px;
 	}
-	to{
-		background-color: green;
-		top: 250px;
-		left: 800px;
+	10%{
+		top: 100px;
+		left: 150px;
 	}
+	20%{
+		top: 150px;
+		left: 250px;
+	}
+	30%{
+		top: 200px;
+		left: 400px;
+	}
+	40%{
+		top: 200px;
+		left: 650px;
+	}
+	50%{
+		top: 300px;
+		left: 800px;
+		transform: rotateY(180deg);		
+	}
+	60%{
+		top: 200px;
+		left: 600px;
+	}
+	70%{
+		top: 150px;
+		left: 400px;
+	}
+	80%{
+		top: 100px;
+		left: 250px;
+	}
+	90%{
+		top: 100px;
+		left: 150px;
+	}
+	100%{		
+		top: 50px;
+		left: 50px;		
+	}		
 }
